# ddddocr

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_EN.md  capabilities.json  initialize.json  list.json  test_api.py
.agent/skills/ddddocr/: SKILL.md
.agent/skills/ddddocr/scripts/: start_ddddocr.py
.github/workflows/: build.yml  test.yaml
ddddocr-dll/: Cargo.toml
ddddocr-dll/src/: lib.rs
model/: common.json  common_old.json  common_old_text.txt  common_text.txt
skills/: SKILL.md
skills/ddddocr/: SKILL.md
skills/ddddocr/references/: mcp.md
skills/ddddocr/scripts/: ocr.py  slide.py
skills/references/: api.md
skills/scripts/: det.py  start_ddddocr.py
src/: lib.rs  main.rs
