[package]
name = "ddddocr"
version = "0.4.1"
edition = "2021"

[features]
# 编译 main 的时候
inline-model = []
load-dynamic = ["ort/load-dynamic"]
cuda = ["ort/cuda"]
download-binaries = ["ort/download-binaries"]
default = ["download-binaries"]

[dependencies]
# 这个版本删除了 Windows DML 以增加兼容性
ort = { git = "https://github.com/86maid/ort.git", default-features = false, features = [
  "ndarray",
  "half",
  "copy-dylibs",
] }
ndarray = "0.15.6"
lazy_static = "1.4.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
anyhow = "1.0"
image = "0.24.0"
imageproc = "0.23.0"
sha256 = "1.1.3"
actix-web = { version = "4", default-features = false, features = [
  "cookies",
  "macros",
  "compress-gzip",
  "compress-brotli",
] }
clap = { version = "4.2.7", features = ["derive"] }
actix-multipart = "0.6.0"
tokio = { version = "1.28.1", features = ["full"] }
futures-util = "0.3.28"
base64 = "0.21.0"
