[package]
name = "ddddocr"
version = "0.4.2"
edition = "2021"

[features]
default = ["inline-model", "download-binaries"]

# 编译 main 的时候，是否内联模型
inline-model = []

# cuda 支持
cuda = ["ort/cuda"]

# 动态链接
load-dynamic = ["ort/load-dynamic"]

# 自动下载动态链接或静态库，取决于 load-dynamic
download-binaries = ["ort/download-binaries"]

[dependencies]
# 推理与数值计算，删除 Windows DML 以增加兼容性
ort = { git = "https://github.com/86maid/ort.git", default-features = false, features = [
  "ndarray",
  "half",
  "copy-dylibs",
] }
ndarray = "0.15.6"

# 静态变量
lazy_static = "1.5.0"

# 序列化 / 反序列化
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.140"

# 错误处理
anyhow = "1.0"

# 图像处理
image = "0.25.6"
imageproc = "0.25.0"

# 加密 / 哈希
sha256 = "1.1.3"
base64 = "0.21.0"

# web 框架
salvo = { version = "0.79.0", features = ["oapi", "anyhow", "rustls", "acme"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# 命令行参数
clap = { version = "4.2.7", features = ["derive"] }

# 异步运行时
tokio = { version = "1.46.1", features = ["full"] }

# 缓存
lru = "0.16.0"
bytes = "1.10.1"
async-trait = "0.1.88"

# ansi
enable-ansi-support = "0.2.1"
